fix stat padding on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,7 @@
   width: 150px;
   height: 150px;
   margin: 20px;
+  padding: 15px;
   flex-shrink: 0;
   display: flex;
   flex-direction: column;
